--- a/themes/css/main.css
+++ b/themes/css/main.css
@@ -580,7 +580,7 @@
         cursor: pointer;
     }
     
-    .amazonbuttonfontstyle {
+    .product-box font.amazonbuttonfontstyle {
         color: black;
         font-weight: normal;
         font-size: 10 px;
