--- a/themes/css/main.css
+++ b/themes/css/main.css
@@ -563,11 +563,9 @@
         height: 60px;
         /* overflow: scroll; */
     }
-    
-    .product-box a.amazonbutton {
+    /* .product-box a.amazonbutton {
         background-color: #ff8000;
-        /* Green */
-        border: none;
+               border: none;
         color: white;
         padding: 2px 3px;
         text-align: center;
@@ -584,7 +582,7 @@
         color: black;
         font-weight: normal;
         font-size: 10 px;
-    }
+    } */
     
     .product-box a.category {
         color: #eb4800;
