--- a/themes/css/mystyle.css
+++ b/themes/css/mystyle.css
@@ -18,3 +18,10 @@
     font-weight: normal;
     font-size: 10 px;
 }
+
+.product-box div.fixedhight {
+    display: block;
+    width: 100%;
+    height: 60px;
+    /* overflow: scroll; */
+}
