--- a/themes/css/mystyle.css
+++ b/themes/css/mystyle.css
@@ -21,7 +21,7 @@
 
 .product-box div.fixedhight {
     display: block;
-    width: 100% !important;
-    height: 60px !important;
+    width: 100%;
+    height: 60px;
     /* overflow: scroll; */
 }
