--- a/themes/css/main.css
+++ b/themes/css/main.css
@@ -520,6 +520,7 @@
         -moz-border-radius: 4px;
         -webkit-border-radius: 4px;
         border-bottom: 1px solid #eee;
+        height: 250px;
     }
     
     .product-box span.sale_tag {
