--- a/themes/css/mystyle.css
+++ b/themes/css/mystyle.css
@@ -1,33 +1,40 @@
 .product-box a.amazonbutton {
-    background-color: #ff8000;
-    border: none;
-    color: white;
-    padding: 2px 3px;
-    text-align: center;
-    text-decoration: none;
-    border-radius: 4px;
-    display: inline-block;
-    font-size: 13px;
-    font-weight: bold;
-    margin: 4px 2px;
-    cursor: pointer;
+  background-color: #ff8000;
+  border: none;
+  color: white;
+  padding: 2px 3px;
+  text-align: center;
+  text-decoration: none;
+  border-radius: 4px;
+  display: inline-block;
+  font-size: 13px;
+  font-weight: bold;
+  margin: 4px 2px;
+  cursor: pointer;
 }
 
 .product-box img.fixedhightimage {
-    display: inline-block;
-    width: 100%;
-    height: 150px;
+  display: inline-block;
+  width: 100%;
+  height: 150px;
 }
 
 .amazonbuttonfontstyle {
-    color: black;
-    font-weight: normal;
-    font-size: 10 px;
+  color: black;
+  font-weight: normal;
+  font-size: 10 px;
 }
 
 .product-box div.fixedhight {
-    display: block;
-    width: 100%;
-    height: 60px;
-    /* overflow: scroll; */
+  display: block;
+  width: 100%;
+  height: 60px;
+  /* overflow: scroll; */
+}
+
+.product-box img.fixed {
+  /* max-width: 100%;
+    max-height: 100%; */
+  width: 170px;
+  height: 150px;
 }
